# RoboComic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check_gpu.py  container.py  main.py  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  quick-test.yml  render-deploy.yml
agents/: audience_agent.py
backend/: .dockerignore  .env.example  .flake8  Dockerfile  container.py  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
backend/agents/: comedian_agent.py
backend/config/: __init__.py  personas.py  settings.py  translations.py
backend/models/: __init__.py  api_models.py
backend/services/: agent_manager.py  api_service.py  llm_service.py  llm_utils.py  prompt_templates.py
backend/tests/: conftest.py  test_api.py  test_api_endpoints.py  test_integration.py  test_models.py  test_services.py  test_utils.py
backend/tts/: bark_tts_service.py  eleven_tts_service.py  tts_service.py
backend/ui/: streamlit_ui.py
backend/utils/: __init__.py  error_handler.py  exceptions.py  logger.py  resilience.py
config/: personas.py  settings.py  translations.py
frontend/: .eslintrc.json  jest.config.js  jest.setup.ts  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/__tests__/: Home.test.tsx  ShowForm.test.tsx  ShowHistory.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/Home/: AppHeader.tsx  ErrorDisplay.tsx  Footer.tsx  LanguageSelector.tsx  LoadingOverlay.tsx  ThemeToggle.tsx  index.tsx  translations.ts
frontend/app/reset-password/: page.tsx
frontend/components/: Api.ts  Footer.tsx  ShowForm.tsx  ShowHistory.tsx
frontend/components/Auth/: AuthForm.tsx
frontend/components/ShowForm/: CheckboxWithTooltip.tsx  ComedianSelector.tsx  FormInput.tsx  FormLabel.tsx  ManagePersonasModal.tsx  NumberInput.tsx  SubmitButton.tsx  TemperatureConfig.tsx  index.tsx
frontend/components/ShowHistory/: Avatar.tsx  ChatBubble.css  ChatBubble.tsx  CustomAudioPlayer.tsx  JudgingSection.tsx  ManagerBubble.tsx  SkeletonBubble.tsx  TTSButton.tsx  WinnerSummary.tsx  index.tsx
frontend/components/UserShowHistorySidebar/: index.tsx
frontend/components/shared/: Tooltip.tsx
frontend/constants/: index.ts
frontend/context/: AuthContext.tsx
frontend/hooks/: useKeepAlive.ts  useLanguage.ts  usePersonaSelection.ts  usePersonas.ts  useShowGeneration.ts  useTheme.ts
frontend/public/: manifest.json  sw.js
frontend/services/: apiService.ts
frontend/types/: index.ts  next-pwa.d.ts
frontend/utils/: isMobile.ts  stringUtils.ts  toTitleCase.ts
services/: agent_manager.py  prompt_templates.py
tts/: bark_tts_service.py  eleven_tts_service.py
ui/: streamlit_ui.py  style.css
web_ui/: package-lock.json  package.json
web_ui/app/: layout.tsx
web_ui/components/: Api.ts  ShowForm.tsx  ShowHistory.tsx
