[project]
name = "RoboComic"
version = "0.1.0"
description = "AI Standup Comedy App - RoboComic"
authors = [
    {name = "Lukasz", email = "lukuch12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
openai = "^1.93.0"
autogen = {version = "^0.9.4", python = ">=3.9,<3.14"}
streamlit = "^1.46.1"
elevenlabs = "^2.5.0"
injector = "^0.22.0"
python-dotenv = "^1.1.1"
requests = "^2.32.4"
suno-bark = {git = "https://github.com/suno-ai/bark.git"}
soundfile = "^0.13.1"
numpy = "1.26.4"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.28.1"
flake8 = "^7.0.0"
black = "^24.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=.",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "-W ignore::DeprecationWarning:jsonschema.*"
]
filterwarnings = [
    "ignore::DeprecationWarning:jsonschema.*",
    "ignore::DeprecationWarning:autogen.*"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
