[tool.poetry]
name = "RoboComic"
version = "0.1.0"
description = "AI Standup Comedy App - RoboComic"
authors = ["Lukasz <lukuch12@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
uvicorn = "^0.35.0"
fastapi = "^0.115.14"
python-dotenv = "^1.1.1"
injector = "^0.22.0"
structlog = "^25.4.0"
elevenlabs = "^2.6.0"
autogen = {version = "^0.9.5", python = ">=3.9,<3.14"}
numpy = "^2.3.1"
openai = "^1.93.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
pytest-mock = "^3.14.1"
httpx = "^0.28.1"
flake8 = "^7.3.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=.",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "-W ignore::DeprecationWarning:jsonschema.*"
]
filterwarnings = [
    "ignore::DeprecationWarning:jsonschema.*",
    "ignore::DeprecationWarning:autogen.*"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
